- The email enrollment and resetting password are added in the Auth_Support folder.
- Two methods are added in one of the interface. Any Database Class should aware of them.
- The 'body-fields' keyed value can contain the stirng constant with start @.
  The value "@123,name" replaces @@1@@ to "123" and @@2@@ to the value of name field.
- The 'realname' field is added to sample schemas for MySQL/PostgreSQL/SQLite.
- Update TestDB.fmp12, TestDB_clone.fmp12 and TestDB.fp7 to add 'realname' field and 'limitdt' field
  to 'authuser' table.
- The global variables $g_dbInstance, $g_serverSideCall in INTER-Mediator.php are deprecated.
- [INFO] FileMaker Server 11 has been deprecated. In the near future, INTER-Mediator will require
  FileMaker Server 12 or later if using FileMaker Server.
- [SECURITY FIX] Improve preventing CSRF Attack by specifying $webServerName (the FQDN for your web 
  server) in params.php.
- [SECURITY FIX] Fix the possibility of an open redirection vulnerability in the file upload component.
- [SECURITY FIX] Update FileUploader.php to prevent the HTTP header injection in PHP's header() for 
  Internet Explorer and PHP 5.2.x/PHP 5.3.x (Fixed in PHP 5.4.38, PHP 5.5.22 and PHP 5.6.6).
- [BUG FIX] Fix detection of params.php file.
- [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
- [BUG FIX] Modify INTERMediator.totalRecordCount after IMLibPageNavigation.deleteRecordFromNavi method.
- [BUG FIX] Fix detecting the Post Only Mode when the value of the enclosure's data-im-control element
  is "enclosure post".
- [BUG FIX] Fix not to remove focus from input field on the Post Only Mode when using validation in some 
  cases.
- [BUG FIX] Definition File Editor can store the some values that are as array.
- [BUG FIX] If the "key" key wasn't supplied, the calculation goes wrong results.
- [BUG FIX] Fix buildup.sh to include "themes" directory correctly. The affected version is 5.2 only.