@@ -74,6 +74,7 @@ Ver.5.3 (in development)
 - Two methods are added in one of the interface. Any Database Class should aware of them.
 - The 'body-fields' keyed value can contain the stirng constant with start @.
   The value "@123,name" replaces @@1@@ to "123" and @@2@@ to the value of name field.
+- data-im-control attribute's value 'header', 'footer', 'separator' are supported.
 - The 'realname' field is added to sample schemas for MySQL/PostgreSQL/SQLite.
 - Update TestDB.fmp12, TestDB_clone.fmp12 and TestDB.fp7 to add 'realname' field and 'limitdt' field
   to 'authuser' table.
